# cosmos-db-wrapper

./: README.md  setup.cfg
.github/workflows/: publish-to-pypi.yml
src/: wrapper.py
src/cosmos_db_wrapper/: aio.py  io.py
